Add memory access example, and refactor:
Added string argument example, which required memory access,
and refactored out common code in examples that were not relevant
to what was being demonstrated.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,12 +1,14 @@
 include ../common.mk
 
-CPPFLAGS=-I../
+CPPFLAGS=-I../ -I./
 LIBTARGET_FILE=../libnitro.a
 LDFLAGS+=$(LIBTARGET_FILE)
 
+COMMON_OBJS=user_utils.o
 BASIC_OBJECTS=basic_main.o
-OBJS=$(BASIC_OBJECTS)
-BINS=basic
+STRING_PARAMS_OBJS=string_params_main.o
+OBJS=$(COMMON_OBJS) $(BASIC_OBJECTS) $(STRING_PARAMS_OBJS)
+BINS=basic string_params
 
 TARGETS=$(OBJS) $(BINS)
 
@@ -15,7 +17,9 @@ all: $(TARGETS)
 %.o: %.c
 	$(CC) -c $< $(CFLAGS) $(CPPFLAGS) -o $@
 
-basic: $(BASIC_OBJECTS)
+basic: $(BASIC_OBJECTS) $(COMMON_OBJS)
+	$(CC) $^ $(CFLAGS) $(LDFLAGS) -o $@
+string_params: $(STRING_PARAMS_OBJS) $(COMMON_OBJS)
 	$(CC) $^ $(CFLAGS) $(LDFLAGS) -o $@
 
 clean:
