Add example for watching processes:
Add example for watching a process that opens a given file.

--- a/.gitignore
+++ b/.gitignore
@@ -21,11 +21,12 @@
 *~
 *.swp
 
-#target
+#targets
 nitro
 examples/basic
 examples/string_params
 examples/all_syscalls
+examples/file_user
 
 #KDevelop files
 *.kdev4
