--- a/examples/Makefile
+++ b/examples/Makefile
@@ -8,8 +8,10 @@ COMMON_OBJS=user_utils.o
 BASIC_OBJECTS=basic_main.o
 STRING_PARAMS_OBJS=string_params_main.o
 ALL_SYSCALLS_OBJS=all_syscalls_main.o
-OBJS=$(COMMON_OBJS) $(BASIC_OBJECTS) $(STRING_PARAMS_OBJS) $(ALL_SYSCALLS_OBJS)
-BINS=basic string_params all_syscalls
+FILE_USER_OBJS=file_user_main.o
+OBJS=$(COMMON_OBJS) $(BASIC_OBJECTS) $(STRING_PARAMS_OBJS) \
+	$(ALL_SYSCALLS_OBJS) $(FILE_USER_OBJS)
+BINS=basic string_params all_syscalls file_user
 
 TARGETS=$(OBJS) $(BINS)
 
@@ -23,6 +25,8 @@ basic: $(BASIC_OBJECTS) $(COMMON_OBJS)
 string_params: $(STRING_PARAMS_OBJS) $(COMMON_OBJS)
 	$(CC) $^ $(CFLAGS) $(LDFLAGS) -o $@
 all_syscalls: $(ALL_SYSCALLS_OBJS) $(COMMON_OBJS)
+	$(CC) $^ $(CFLAGS) $(LDFLAGS) -o $@
+file_user: $(FILE_USER_OBJS) $(COMMON_OBJS)
 	$(CC) $^ $(CFLAGS) $(LDFLAGS) -o $@
 
 clean:
